--- a/scss/main.css
+++ b/scss/main.css
@@ -998,7 +998,6 @@ p {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 6px, rgba(0, 0, 0, 0.23) 0px 2px 6px;
   border-radius: 5px;
   padding: 4rem !important;
-  margin-bottom: 50px;
 }
 .content-services__item__box__title {
   margin-top: 20px;
@@ -1038,7 +1037,6 @@ p {
   width: 80px;
   height: 80px;
   margin-top: 15px !important;
-  margin-bottom: 30px;
 }
 
 .technologies-icons {
